# arduino_network

./: CMakeLists.txt  library.json
endpoint/controller/: IWiFiCredentialsController.h  IWifiCredentialsController.h  WifiCredentialsController.h
endpoint/entity/: WifiConnection.h  WifiCredentials.h
endpoint/repository/: WiFiConnectionRepository.h  WifiConnectionRepository.h  WifiCredentialsRepository.h
endpoint/service/: IWiFiService.h  IWifiService.h  WiFiService.h  WifiService.h
include/: IInternetConnectionStatusProvider.h  INetworkStatusProvider.h  ISample.h  IWifiConnectionStatusProvider.h  InternetHealthCheckerThread.h  Sample.h  StarIncludes.h  SybIncludes.h  WiFiHealthCheckerThread.h
internal/01-network/00-public/: 01-INetworkStatusProvider.h  02-INetworkConnectionManager.h
internal/01-network/01-interface/: 01-INetworkConnectionStatusStore.h  01-INetworkStatusStore.h  01-IWifiConnectionStatusStore.h  02-INetworkConnectionStatusProvider.h  02-INetworkStatusProvider.h  02-IWifiConnectionStatusProvider.h  03-INetworkConnection.h  03-INetworkConnectionManager.h  03-IWifiConnection.h  03-IWifiConnectionManager.h
internal/01-network/02-variant/: 01-NetworkConnectionStatusStore.h  01-NetworkStatusStore.h  01-WifiConnectionStatusStore.h  02-NetworkConnectionStatusProvider.h  02-NetworkStatusProvider.h  02-WifiConnectionStatusProvider.h  03-NetworkConnection.h  03-NetworkConnectionManager.h  03-WifiConnection.h  03-WifiConnectionManager.h
internal/02-wifi/00-public/: 01-IWiFiConnectionStatusProvider.h  01-IWifiConnectionStatusProvider.h  02-IWiFiConnectionManager.h  02-IWifiConnectionManager.h
internal/02-wifi/01-interface/: 01-IWifiConnectionStatusStore.h  02-IWifiConnectionStatusProvider.h  03-IWifiConnectionManager.h
internal/02-wifi/02-variant/: 01-WifiConnectionStatusStore.h  02-WiFiConnectionStatusProvider.h  02-WifiConnectionStatusProvider.h  03-WiFiConnectionManager.h  03-WifiConnectionManager.h
internal/03-internet/00-public/: 01-IInternetConnectionStatusProvider.h  02-IInternetConnectionManager.h
internal/03-internet/01-interface/: 01-IInternetConnectionStatusStore.h  02-IInternetConnectionStatusProvider.h  03-IInternetConnectionManager.h
internal/03-internet/02-variant/: 01-InternetConnectionStatusStore.h  02-InternetConnectionStatusProvider.h  03-InternetConnectionManager.h
internal/04-thread/00-public/: 01-WiFiHealthCheckerThread.h  02-InternetHealthCheckerThread.h
internal/04-thread/01-variant/: 01-WiFiHealthCheckerThread.h  02-InternetHealthCheckerThread.h
